updated the homr page button possition plus the my story page with the testiminial section

--- a/index.html
+++ b/index.html
@@ -96,9 +96,9 @@
 
     <section>
         <!-- Main Content -->
-        <div class="container-fluid main ">
+        <div class="container-fluid main">
             <div class="row ">
-                <div class="col-xs-12">
+                <div class="col-sm-12">
                     <h1 class="home-page-h1">Conbu Interior Design........</h1>
                     <p class="home-page-p">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis
                         nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure.
@@ -106,13 +106,13 @@
                 </div>
             </div>
             <div class="row ">
-                <div class="col-xs-12">
+                <div class="col-sm-12">
                     <h1 class="awards-h1">Awards and Memberships</h1>
                     <hr class="block-divider-portfolio">
                 </div>
             </div>
             <div class="row ">
-                <div class="col-xs-12">
+                <div class="col-sm-12">
                     <div class="home-image">
                         <a href="#">
                         <img src="images/bestofhouzz2018.png" class="award-logo-houzz" alt="Image"> 
@@ -129,12 +129,18 @@
                     </div>
                 </div>
             </div>
-            <div class="row ">
-                <div class="col-xs-4"></div>
-                <div class="col-xs-4">
-                    <a href="contact.html" <button type="button" class="btn btn-success btn-md hidden-md hidden-lg hidden-xl">Contact Us</button></a>
+            <div class="row">
+                <div class="col-sm-12">
+                    <div class="row">
+                        <div class="col-xs-4">
+                        </div>
+                        <div class="col-xs-4">
+                            <a href="contact.html" <button type="button" class="btn btn-success btn-md">Contact Us</button></a>
+                        </div>
+                        <div class="col-xs-4">
+                        </div>
+                    </div>
                 </div>
-                <div class="col-xs-4"></div>
             </div>
         </div>
         <!-- Main Content -->
@@ -162,9 +168,6 @@
 
     <!-- Footer -->
 
-
-    <!-- Latest compiled and minified JQuery -->
-    <script src="https://code.jquery.com/jquery-3.3.1.min.js " integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin=" anonymous "></script>
     <!-- Latest compiled and minified JavaScript -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js " integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa " crossorigin="anonymous "></script>
 
