created the blog page and updated css file

--- a/blog.html
+++ b/blog.html
@@ -13,7 +13,6 @@
 </head>
 
 <body>
-
     <!-- NAV -->
     <nav class="navbar navbar-default">
         <div class="container-fluid">
@@ -48,8 +47,138 @@
             </div>
         </div>
     </nav>
-
     <!-- NAV -->
+
+    <section>
+        <div class="container">
+            <div class="row">
+                <div class="col-sm-12">
+                    <h1 class="portfolio-h1">Blog</h1>
+                    <hr class="block-divider-portfolio">
+                </div>
+            </div>
+        </div>
+        <div class="container">
+            <div class="row">
+                <div class="col-sm-12">
+                    <!-- Form code from W3 schools -->
+                    <div class="blog-p">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Lorem ipsum dolor sit amet, consectetuer adipiscing elit. consectetuer adipiscing elit. adipiscing elit. consectetuer adipiscing elit. adipiscing elit. consectetuer adipiscing
+                        consectetuer adipiscing elit. adipiscing elit. consectetuer adipiscing elit. adipiscing elit. consectetuer adipiscing elit.
+                    </div>
+                    <form class="form-inline" action="/action_page.php">
+                        <div class="form-group">
+                            <input type="name" class="form-control" id="name-first" placeholder="Your First Name" name="name">
+                        </div>
+                        <div class="form-group">
+                            <input type="name" class="form-control" id="name-second" placeholder="Your Surname" name="name">
+                        </div>
+                        <div class="form-group">
+                            <input type="email" class="form-control" id="email" placeholder="Enter your Email Address" name="email">
+                        </div>
+                        <button type="submit" class="btn btn-default btn-blog">Sign Up to Receive our Newsletter</button>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section>
+        <div class="container-fluid blog">
+            <div class="row">
+                <div class="col-sm-4">
+                    <div class="container">
+                        <div class="row">
+                            <div class="col-sm-2">
+                                <div class="blog-image">
+                                    <img src="https://placehold.it/200x100? text=IMAGE" class="imgage-in-blog" style="width:33% height:66%" alt="Image ">
+                                    </a>
+                                </div>
+                            </div>
+                            <div class="col-sm-2">
+                                <div class="blog-image ">
+                                    <img src="https://placehold.it/200x100? text=IMAGE" class="imgage-in-blog" style="width:33% height:66%" alt="Image ">
+                                    </a>
+                                </div>
+                            </div>
+                            <div class="col-sm-2">
+                                <div class="blog-image ">
+                                    <img src="https://placehold.it/200x100? text=IMAGE" class="imgage-in-blog" style="width:33% height:66%" alt="Image">
+                                </div>
+                            </div>
+                        </div>
+                        <div class="row ">
+                            <div class="col-sm-2">
+                                <div class="blog-image ">
+                                    <img src="https://placehold.it/200x100? text=IMAGE" class="imgage-in-blog" style="width:33% height:66%" alt="Image">
+                                    </a>
+                                </div>
+                            </div>
+                            <div class="col-sm-2">
+                                <div class="blog-image ">
+                                    <img src="https://placehold.it/200x100? text=IMAGE" class="imgage-in-blog" style="width:33% height:66%" alt="Image">
+                                    </a>
+                                </div>
+                            </div>
+                            <div class="col-sm-2">
+                                <div class="blog-image ">
+                                    <img src="https://placehold.it/200x100? text=IMAGE" class="imgage-in-blog" style="width:33% height:66%" alt="Image">
+                                </div>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-sm-2">
+                                <div class="blog-image ">
+                                    <img src="https://placehold.it/1200x100? text=IMAGE" class="imgage-in-blog " style="width:33% height:66%" alt="Image">
+                                    </a>
+                                </div>
+                            </div>
+                            <div class="col-sm-2">
+                                <div class="blog-image ">
+                                    <img src="https://placehold.it/200x100? text=IMAGE" class="imgage-in-blog" style="width:33% height:66%" alt="Image">
+                                    </a>
+                                </div>
+                            </div>
+                            <div class="col-sm-2">
+                                <div class="blog-image ">
+                                    <img src="https://placehold.it/200x100? text=IMAGE" class="imgage-in-blog" style="width:33% height:66% " alt="Image">
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm-4 ">
+                    <img src="https://placehold.it/250x180?text=IMAGE " class="imgage-in-blog " style="width:100% " alt="Image ">
+                    </a>
+                </div>
+                <div class="col-sm-4 ">
+                    <div class="blog-image ">
+                        <img src="https://placehold.it/250x180?text=IMAGE " class="imgage-in-blog " style="width:100% " alt="Image ">
+                        </a>
+                    </div>
+                </div>
+            </div>
+            <div class="row ">
+                <div class="col-sm-4 ">
+                    <div class="blog-image ">
+                        <img src="https://placehold.it/250x180?text=IMAGE " class="imgage-in-blog " style="width:100% " alt="Image ">
+                        </a>
+                    </div>
+                </div>
+                <div class="col-sm-4 ">
+                    <div class="blog-image ">
+                        <img src="https://placehold.it/250x180?text=IMAGE " class="imgage-in-blog " style="width:100% " alt="Image ">
+                        </a>
+                    </div>
+                </div>
+                <div class="col-sm-4 ">
+                    <div class="blog-image ">
+                        <img src="https://placehold.it/250x180?text=IMAGE " class="imgage-in-blog " style="width:100% " alt="Image ">
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
 
 
     <!-- Footer -->
@@ -67,15 +196,12 @@
                     <li class="fa fa-instagram "><a href="# "></a></li>
                 </ul>
             </div>
-            <p class="copyright">© 2018 Copyright: Conbu Interior Design</p>
+            <p class="copyright ">© 2018 Copyright: Conbu Interior Design</p>
         </div>
     </footer>
 
     <!-- Footer -->
 
-
-    <!-- Latest compiled and minified JQuery -->
-    <script src="https://code.jquery.com/jquery-3.3.1.min.js " integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin=" anonymous "></script>
     <!-- Latest compiled and minified JavaScript -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js " integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa " crossorigin="anonymous "></script>
 
