updated the margins and paddingon the services.html page and style sheet

--- a/services.html
+++ b/services.html
@@ -51,15 +51,13 @@
 
     <!-- NAV -->
 
-
-
     <section>
-        <div class="container-fluid services">
+        <div class="container-fluid">
             <div class="row">
                 <div class="col-sm-12 ">
                     <h1 class="portfolio-h1">Services</h1>
                     <hr class="block-divider-portfolio">
-                    <div class="services-p">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis
+                    <div class="services-p-top">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis
                         nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis.
                         </p>
                         <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis
@@ -73,18 +71,15 @@
 
     <!-- Main Content -->
     <section>
-        <div class="container-fluid services">
+        <div class="container-fluid">
             <div class="row">
-                <div class="services-image">
-                    <div class="col-sm-8">
-                        <img src="images/services.jpg"></img>
-                    </div>
+                <div class="col-sm-8">
+                    <img class="services-images" src="images/services.jpg"></img>
                 </div>
                 <div class="col-sm-4">
-                    <h2 class="portfolio-h1">Interior Design</h2>
+                    <h2 class="services-h2">Interior Design</h2>
                     <hr class="block-divider-portfolio">
                     <div class="services-p">Lorem ipsum dolor sit amet, "I haven't been sober for months" nibh euismod tincidunt ut laoreet dolore magna aliquam.
-                        </p>
                         <p>Lorem ipsum dolor sit amet, "I haven't been sober for months" nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.
                         </p>
                     </div>
@@ -92,7 +87,7 @@
             </div>
             <div class="row">
                 <div class="col-sm-4">
-                    <h2 class="portfolio-h1">Design Collections</h2>
+                    <h2 class="services-h2">Design Collections</h2>
                     <hr class="block-divider-portfolio">
                     <div class="services-p">Lorem ipsum dolor sit amet, "I haven't been sober for months" nibh euismod tincidunt ut laoreet dolore magna aliquam.
                         </p>
@@ -100,22 +95,12 @@
                         </p>
                     </div>
                 </div>
-                <div class="services-image">
-                    <div class="col-sm-8">
-                        <img src="images/services.jpg"></img>
-                    </div>
+                <div class="col-sm-8">
+                    <img class="services-images" src="images/services.jpg"></img>
                 </div>
             </div>
         </div>
-        </div>
-
-
     </section>
-
-
-
-
-
 
     <!-- Footer -->
 
