--- a/contact.html
+++ b/contact.html
@@ -14,7 +14,7 @@
 
 <body>
 
- <!-- NAV -->
+    <!-- NAV -->
     <nav class="navbar navbar-default">
         <div class="container-fluid ">
             <div class="navbar-header ">
@@ -48,9 +48,81 @@
             </div>
         </div>
     </nav>
-
     <!-- NAV -->
-   
+
+
+    <section>
+        <div class="container">
+            <div class="row">
+                <div class="col-sm-4">
+                    <div class="left-column-contact">
+                        <ul class="list-group">
+                            <li class="contact-item"><i class="fa fa-phone"></i><span>Telephone</span>
+                            </li>
+                            <p>01 123654</p>
+                            <p>087 123654</p>
+                            <hr class="block-divider-contact">
+                            <li class="contact-item"><i class="fa fa-envelope"></i><span>Email</span>
+                            </li>
+                            <p>angela@conbudesign.com</p>
+                            <hr class="block-divider-contact">
+                            <li class="contact-item"><i class="fa fa-twitter"></i><span>Twitter</span>
+                            </li>
+                            <p>https://twitter.com/ConbuInteriors
+                            </p>
+                            <hr class="block-divider-contact">
+                            <li class="contact-item"><i class="fa fa-pinterest"></i><span>Pinterest</span>
+                            </li>
+                            <p>https://www.pinterest.ie/ConbuInteriors/overview/</p>
+                            <hr class="block-divider-contact">
+                            <li class="contact-item"><i class="fa fa-linkedin"></i><span>Linkedln</span>
+                            </li>
+                            <p>https://www.linkedin.com/in/angelatconnolly/ </p>
+                        </ul>
+
+                    </div>
+                </div>
+                <div class="col-sm-4">
+                    <h4 class="contact-h4">Ask a Question or Book a Consultation</h4>
+                    <form action="/action_page.php">
+                        <div class="form-group">
+                            <label for="name">Name: *</label>
+                            <input type="text" class="form-control" id="name" placeholder="Name" name="name">
+                        </div>
+                        <div class="form-group">
+                            <label for="email">Email: *</label>
+                            <input type="email" class="form-control" id="email" placeholder="Email" name="email">
+                        </div>
+                        <div class="form-group">
+                            <label for="subject">Subject: *</label>
+                            <input type="text" class="form-control" id="subject" placeholder="Subject" name="subject">
+                        </div>
+                        <div class="form-group">
+                            <label for="subject">Message: *</label>
+                            <textarea class="form-control" rows="5" id="comment"></textarea>
+                        </div>
+                        <button type="submit" class="btn btn-default">Submit</button>
+                    </form>
+                </div>
+                <div class="col-sm-4">
+                    <div class="location-heading">
+                        <i class="fa fa-map-marker" style="font-size:28px;color:red"></i><span class="location">Location</span>
+                        <br><br>
+                    </div>
+                    <div class="contact-p">
+                        <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna nisl ut aliquip ex ea commodo consequat.</p>
+                        <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nisl ut aliquip ex ea commodo consequat.</p>
+                    </div>
+                    <div class="location-image">
+                        <img src="images/googleac1.jpg" class="imgage-in-mystory-page" alt="Image">
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+
+
 
     <!-- Footer -->
 
@@ -59,12 +131,12 @@
             <div class="social-links ">
                 <p class="follow-us ">Follow us on:</p>
                 <ul class="social-icons ">
-                    <li class="fa fa-linkedin "><a href="# "></a></li>
-                    <li class="fa fa-facebook "><a href="# "></a></li>
-                    <li class="fa fa-twitter "><a href="# "></a></li>
-                    <li class="fa fa-houzz "><a href="#h "></a></li>
-                    <li class="fa fa-pinterest "><a href="# "></a></li>
-                    <li class="fa fa-instagram "><a href="# "></a></li>
+                    <li class="fa fa-linkedin"><a href="# "></a></li>
+                    <li class="fa fa-facebook"><a href="# "></a></li>
+                    <li class="fa fa-twitter"><a href="# "></a></li>
+                    <li class="fa fa-houzz"><a href="#h "></a></li>
+                    <li class="fa fa-pinterest"><a href="# "></a></li>
+                    <li class="fa fa-instagram"><a href="# "></a></li>
                 </ul>
             </div>
             <p class="copyright">© 2018 Copyright: Conbu Interior Design</p>
@@ -74,8 +146,6 @@
     <!-- Footer -->
 
 
-    <!-- Latest compiled and minified JQuery -->
-    <script src="https://code.jquery.com/jquery-3.3.1.min.js " integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin=" anonymous "></script>
     <!-- Latest compiled and minified JavaScript -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js " integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa " crossorigin="anonymous "></script>
 
