updated the hr element on contact page with the style sheet

--- a/contact.html
+++ b/contact.html
@@ -68,16 +68,15 @@
                             <hr class="block-divider-contact">
                             <li class="contact-item"><i class="fa fa-twitter"></i><span>Twitter</span>
                             </li>
-                            <p>https://twitter.com/ConbuInteriors
-                            </p>
+                            <p>twitter.com/ConbuInteriors</p>
                             <hr class="block-divider-contact">
                             <li class="contact-item"><i class="fa fa-pinterest"></i><span>Pinterest</span>
                             </li>
-                            <p>https://www.pinterest.ie/ConbuInteriors/overview/</p>
+                            <p>pinterest.ie/ConbuInteriors/overview</p>
                             <hr class="block-divider-contact">
                             <li class="contact-item"><i class="fa fa-linkedin"></i><span>Linkedln</span>
                             </li>
-                            <p>https://www.linkedin.com/in/angelatconnolly/ </p>
+                            <p>linkedin.com/in/angelatconnolly</p>
                         </ul>
 
                     </div>
