altered the blog page to get rid of the margins and padding on the images

--- a/blog.html
+++ b/blog.html
@@ -85,19 +85,19 @@
     <section>
         <div class="container-fluid blog">
             <div class="row">
-                <div class="col-sm-4">
+                <div class="col-sm-4 blog">
                     <div class="blog-image">
                         <img src="https://placehold.it/250x180?text=IMAGE " class="imgage-in-blog " style="width:100% " alt="Image">
                         </a>
                     </div>
                 </div>
-                <div class="col-sm-4">
+                <div class="col-sm-4 blog">
                     <div class="blog-image">
                         <img src="https://placehold.it/250x180?text=IMAGE " class="imgage-in-blog " style="width:100% " alt="Image">
                         </a>
                     </div>
                 </div>
-                <div class="col-sm-4">
+                <div class="col-sm-4 blog">
                     <div class="blog-image">
                         <img src="https://placehold.it/250x180?text=IMAGE " class="imgage-in-blog " style="width:100% " alt="Image">
                         </a>
@@ -105,19 +105,19 @@
                 </div>
             </div>
             <div class="row ">
-                <div class="col-sm-4">
+                <div class="col-sm-4 blog">
                     <div class="blog-image">
                         <img src="https://placehold.it/250x180?text=IMAGE " class="imgage-in-blog " style="width:100% " alt="Image">
                         </a>
                     </div>
                 </div>
-                <div class="col-sm-4">
+                <div class="col-sm-4 blog">
                     <div class="blog-image">
                         <img src="https://placehold.it/250x180?text=IMAGE " class="imgage-in-blog " style="width:100% " alt="Image">
                         </a>
                     </div>
                 </div>
-                <div class="col-sm-4">
+                <div class="col-sm-4 blog">
                     <div class="blog-image">
                         <img src="https://placehold.it/250x180?text=IMAGE " class="imgage-in-blog " style="width:100% " alt="Image">
                         </a>
