--- a/contact.html
+++ b/contact.html
@@ -31,10 +31,18 @@
             </div>
             <div class="navbar-collapse collapse " id="navbar">
                 <ul class="social-icons-nav hidden-xs hidden-sm">
-                    <li class="fa fa-linkedin "><a href="# "></a></li>
-                    <li class="fa fa-twitter "><a href="# "></a></li>
-                    <li class="fa fa-facebook "><a href="# "></a></li>
-                    <li class="fa fa-pinterest "><a href="# "></a></li>
+                    <a href="https://www.linkedin.com/in/angelatconnolly">
+                        <li class="fa fa-linkedin"></li>
+                    </a>
+                    <a href="https://twitter.com/ConbuInteriors">
+                        <li class="fa fa-twitter"></li>
+                    </a>
+                    <a href="https://www.facebook.com/ConbuInteriorDesign">
+                        <li class="fa fa-facebook"></li>
+                    </a>
+                    <a href="https://www.pinterest.ie/ConbuInteriors/overview">
+                        <li class="fa fa-pinterest"></li>
+                    </a>
                     <li class="fa fa-google "><a href="#h "></a></li>
                 </ul>
                 <ul class="nav navbar-nav navbar-left">
@@ -64,63 +72,69 @@
                             <hr class="block-divider-contact">
                             <li class="contact-item"><i class="fa fa-envelope"></i><span>Email</span>
                             </li>
-                            <p>angela@conbudesign.com</p>
-                            <hr class="block-divider-contact">
-                            <li class="contact-item"><i class="fa fa-twitter"></i><span>Twitter</span>
+                            <p>
+                                <a href="angela@conbudesign.com">angela@conbudesign.com</a>
+                            </p>
+                            <hr class="block-divider-contact ">
+                            <li class="contact-item "><i class="fa fa-twitter "></i><span>Twitter</span>
                             </li>
-                            <p>twitter.com/ConbuInteriors</p>
-                            <hr class="block-divider-contact">
-                            <li class="contact-item"><i class="fa fa-pinterest"></i><span>Pinterest</span>
+                            <p>
+                                <a href="https://twitter.com/ConbuInteriors">www.twitter.com/ConbuInteriors</a>
+                            </p>
+                            <hr class="block-divider-contact ">
+                            <li class="contact-item "><i class="fa fa-pinterest "></i><span>Pinterest</span>
                             </li>
-                            <p>pinterest.ie/ConbuInteriors/overview</p>
+                            <p>
+                                <a href="https://www.pinterest.ie/ConbuInteriors/overview">www.pinterest.ie/ConbuInteriors/overview</a>
+                            </p>
                             <hr class="block-divider-contact">
-                            <li class="contact-item"><i class="fa fa-linkedin"></i><span>Linkedln</span>
+                            <li class="contact-item "><i class="fa fa-linkedin "></i><span>Linkedln</span>
                             </li>
-                            <p>linkedin.com/in/angelatconnolly</p>
+                            <p>
+                                <a href="https://www.linkedin.com/in/angelatconnolly">www.linkedin.com/in/angelatconnolly</a>
+                            </p>
                         </ul>
 
                     </div>
                 </div>
-                <div class="col-sm-4">
-                    <h4 class="contact-h4">Ask a Question or Book a Consultation</h4>
-                    <form action="/action_page.php">
-                        <div class="form-group">
-                            <label for="name">Name: *</label>
-                            <input type="text" class="form-control" id="name" placeholder="Name" name="name">
+                <div class="col-sm-4 ">
+                    <h4 class="contact-h4 ">Ask a Question or Book a Consultation</h4>
+                    <form action="/action_page.php ">
+                        <div class="form-group ">
+                            <label for="name ">Name: *</label>
+                            <input type="text " class="form-control " id="name " placeholder="Name " name="name ">
                         </div>
-                        <div class="form-group">
-                            <label for="email">Email: *</label>
-                            <input type="email" class="form-control" id="email" placeholder="Email" name="email">
+                        <div class="form-group ">
+                            <label for="email ">Email: *</label>
+                            <input type="email " class="form-control " id="email " placeholder="Email " name="email ">
                         </div>
-                        <div class="form-group">
-                            <label for="subject">Subject: *</label>
-                            <input type="text" class="form-control" id="subject" placeholder="Subject" name="subject">
+                        <div class="form-group ">
+                            <label for="subject ">Subject: *</label>
+                            <input type="text " class="form-control " id="subject " placeholder="Subject " name="subject ">
                         </div>
-                        <div class="form-group">
-                            <label for="subject">Message: *</label>
-                            <textarea class="form-control" rows="5" id="comment"></textarea>
+                        <div class="form-group ">
+                            <label for="subject ">Message: *</label>
+                            <textarea class="form-control " rows="5 " id="comment "></textarea>
                         </div>
-                        <button type="submit" class="btn btn-default">Submit</button>
+                        <button type="submit " class="btn btn-default ">Submit</button>
                     </form>
                 </div>
-                <div class="col-sm-4">
-                    <div class="location-heading">
-                        <i class="fa fa-map-marker" style="font-size:28px;color:red"></i><span class="location">Location</span>
+                <div class="col-sm-4 ">
+                    <div class="location-heading ">
+                        <i class="fa fa-map-marker " style="font-size:28px;color:red "></i><span class="location ">Location</span>
                         <br><br>
                     </div>
-                    <div class="contact-p">
+                    <div class="contact-p ">
                         <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna nisl ut aliquip ex ea commodo consequat.</p>
                         <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nisl ut aliquip ex ea commodo consequat.</p>
                     </div>
-                    <div class="location-image">
-                        <img src="images/googleac1.jpg" class="imgage-in-mystory-page" alt="Image">
+                    <div class="location-image ">
+                        <img src="images/googleac1.jpg " class="imgage-in-mystory-page " alt="Image ">
                     </div>
                 </div>
             </div>
         </div>
     </section>
-
-
 
 
     <!-- Footer -->
@@ -130,15 +144,27 @@
             <div class="social-links ">
                 <p class="follow-us ">Follow us on:</p>
                 <ul class="social-icons ">
-                    <li class="fa fa-linkedin"><a href="# "></a></li>
-                    <li class="fa fa-facebook"><a href="# "></a></li>
-                    <li class="fa fa-twitter"><a href="# "></a></li>
-                    <li class="fa fa-houzz"><a href="#h "></a></li>
-                    <li class="fa fa-pinterest"><a href="# "></a></li>
-                    <li class="fa fa-instagram"><a href="# "></a></li>
+                    <a href="https://www.linkedin.com/in/angelatconnolly">
+                        <li class="fa fa-linkedin"></li>
+                    </a>
+                    <a href="https://www.facebook.com/ConbuInteriorDesign">
+                        <li class="fa fa-facebook"></li>
+                    </a>
+                    <a href="https://twitter.com/ConbuInteriors">
+                        <li class="fa fa-twitter"></li>
+                    </a>
+                    <a href="https://www.houzz.ie/pro/atconnolly/conbu-interior-design">
+                        <li class="fa fa-houzz"></li>
+                    </a>
+                    <a href="https://www.pinterest.ie/ConbuInteriors/overview">
+                        <li class="fa fa-pinterest"></li>
+                    </a>
+                    <a href="https://www.instagram.com/conbudesign">
+                        <li class="fa fa-instagram"></li>
+                    </a>
                 </ul>
             </div>
-            <p class="copyright">© 2018 Copyright: Conbu Interior Design</p>
+            <p class="copyright ">© 2018 Copyright: Conbu Interior Design</p>
         </div>
     </footer>
 
