--- a/services.html
+++ b/services.html
@@ -31,10 +31,18 @@
             </div>
             <div class="navbar-collapse collapse " id="navbar">
                 <ul class="social-icons-nav hidden-xs hidden-sm">
-                    <li class="fa fa-linkedin "><a href="# "></a></li>
-                    <li class="fa fa-twitter "><a href="# "></a></li>
-                    <li class="fa fa-facebook "><a href="# "></a></li>
-                    <li class="fa fa-pinterest "><a href="# "></a></li>
+                    <a href="https://www.linkedin.com/in/angelatconnolly">
+                        <li class="fa fa-linkedin"></li>
+                    </a>
+                    <a href="https://twitter.com/ConbuInteriors">
+                        <li class="fa fa-twitter"></li>
+                    </a>
+                    <a href="https://www.facebook.com/ConbuInteriorDesign">
+                        <li class="fa fa-facebook"></li>
+                    </a>
+                    <a href="https://www.pinterest.ie/ConbuInteriors/overview">
+                        <li class="fa fa-pinterest"></li>
+                    </a>
                     <li class="fa fa-google "><a href="#h "></a></li>
                 </ul>
                 <ul class="nav navbar-nav navbar-left">
@@ -48,7 +56,6 @@
             </div>
         </div>
     </nav>
-
     <!-- NAV -->
 
     <section>
@@ -104,17 +111,29 @@
 
     <!-- Footer -->
 
-    <footer class="container-fluid text-center">
+    <footer class="container-fluid text-center ">
         <div class="row ">
             <div class="social-links ">
                 <p class="follow-us ">Follow us on:</p>
                 <ul class="social-icons ">
-                    <li class="fa fa-linkedin "><a href="# "></a></li>
-                    <li class="fa fa-facebook "><a href="# "></a></li>
-                    <li class="fa fa-twitter "><a href="# "></a></li>
-                    <li class="fa fa-houzz "><a href="#h "></a></li>
-                    <li class="fa fa-pinterest "><a href="# "></a></li>
-                    <li class="fa fa-instagram "><a href="# "></a></li>
+                    <a href="https://www.linkedin.com/in/angelatconnolly">
+                        <li class="fa fa-linkedin"></li>
+                    </a>
+                    <a href="https://www.facebook.com/ConbuInteriorDesign">
+                        <li class="fa fa-facebook"></li>
+                    </a>
+                    <a href="https://twitter.com/ConbuInteriors">
+                        <li class="fa fa-twitter"></li>
+                    </a>
+                    <a href="https://www.houzz.ie/pro/atconnolly/conbu-interior-design">
+                        <li class="fa fa-houzz"></li>
+                    </a>
+                    <a href="https://www.pinterest.ie/ConbuInteriors/overview">
+                        <li class="fa fa-pinterest"></li>
+                    </a>
+                    <a href="https://www.instagram.com/conbudesign">
+                        <li class="fa fa-instagram"></li>
+                    </a>
                 </ul>
             </div>
             <p class="copyright ">© 2018 Copyright: Conbu Interior Design</p>
@@ -124,8 +143,6 @@
     <!-- Footer -->
 
 
-    <!-- Latest compiled and minified JQuery -->
-    <script src="https://code.jquery.com/jquery-3.3.1.min.js " integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin=" anonymous "></script>
     <!-- Latest compiled and minified JavaScript -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js " integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa " crossorigin="anonymous "></script>
 
