added the award logos to bottom of the contact page and also updated the style sheet

--- a/contact.html
+++ b/contact.html
@@ -134,6 +134,25 @@
                 </div>
             </div>
         </div>
+        <hr>
+        <div class="container">
+            <div class="row">
+                <div class="contact-awards">
+                    <a href="#">
+                        <img src="images/bestofhouzz2018.png" class="award-logo-houzz" alt="Image"> 
+                        </a>
+                    <a href="#">
+                        <img src="images/bestofhouzz2017.png" class="award-logo-houzz" alt="Image"> 
+                        </a>
+                    <a href="#">
+                        <img src="images/buildaward2018.jpg" class="award-logo-buildaward" alt="Image"> 
+                        </a>
+                    <a href="#">
+                        <img src="images/irishgeorgiansociety.jpg" class="award-logo-igs" alt="Image"> 
+                        </a>
+                </div>
+            </div>
+        </div>
     </section>
 
 
