--- a/services.html
+++ b/services.html
@@ -80,7 +80,7 @@
     <section>
         <div class="container-fluid">
             <div class="row">
-                <div class="col-sm-8">
+                <div class="col-sm-8 services">
                     <img class="services-images" src="images/services.jpg"></img>
                 </div>
                 <div class="col-sm-4">
@@ -102,7 +102,7 @@
                         </p>
                     </div>
                 </div>
-                <div class="col-sm-8">
+                <div class="col-sm-8 services">
                     <img class="services-images" src="images/services.jpg"></img>
                 </div>
             </div>
