added audio and video files

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                      <span class="icon-bar "></span>
                      <span class="icon-bar "></span>
                 </button>
-                <a class="navbar-logo" href="#myPage">
+                <a class="navbar-logo">
                     <a href="index.html" class="navbar-logo">
                       <img class="logo" src="/images/ConbuInteriorDesignlogo2updated1.png " alt="logo ">
                     </a>
@@ -57,7 +57,6 @@
         </div>
     </nav>
     <!-- NAV -->
-
 
 
     <section>
@@ -101,57 +100,37 @@
         <!-- Slider -->
     </section>
 
-
     <section>
-        <!-- Main Content -->
-        <div class="container-fluid main">
-            <div class="row ">
-                <div class="col-sm-12">
-                    <h1 class="home-page-h1">Conbu Interior Design........</h1>
-                    <p class="home-page-p">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis
-                        nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure.
-                    </p>
-                </div>
-            </div>
-            <div class="row ">
-                <div class="col-sm-12">
-                    <h1 class="awards-h1">Awards and Memberships</h1>
-                    <hr class="block-divider-portfolio">
-                </div>
-            </div>
-            <div class="row ">
-                <div class="col-sm-12">
-                    <div class="home-image">
-                        <a href="#">
-                        <img src="images/bestofhouzz2018.png" class="award-logo-houzz" alt="Image"> 
-                        </a>
-                        <a href="#">
-                        <img src="images/bestofhouzz2017.png" class="award-logo-houzz" alt="Image"> 
-                        </a>
-                        <a href="#">
-                        <img src="images/buildaward2018.jpg" class="award-logo-buildaward" alt="Image"> 
-                        </a>
-                        <a href="#">
-                        <img src="images/irishgeorgiansociety.jpg" class="award-logo-igs" alt="Image"> 
-                        </a>
-                    </div>
-                </div>
-            </div>
+        <div class="container">
             <div class="row">
-                <div class="col-sm-12">
-                    <div class="row">
-                        <div class="col-xs-4">
-                        </div>
-                        <div class="col-xs-4">
-                            <a href="contact.html" <button type="button" class="btn btn-success btn-md">Contact Us</button></a>
-                        </div>
-                        <div class="col-xs-4">
-                        </div>
-                    </div>
-                </div>
+                <h1 class="home-page-h1">Conbu Interior Design........</h1>
+                <p class="home-page-p">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl
+                    ut aliquip ex ea commodo consequat. Duis autem vel eum iriure.
+                </p>
             </div>
         </div>
-        <!-- Main Content -->
+        <div class="container">
+            <div class="row ">
+                <h1 class="awards-h1">Awards and Memberships</h1>
+                <hr class="block-divider-portfolio hidden-lg hidden-md hidden-sm">
+            </div>
+        </div>
+        <div class="container">
+            <div class="row">
+                <a href="#">
+                        <img src="images/bestofhouzz2018.png" class="award-logo-houzz" alt="Image"> 
+                        </a>
+                <a href="#">
+                        <img src="images/bestofhouzz2017.png" class="award-logo-houzz" alt="Image"> 
+                        </a>
+                <a href="#">
+                        <img src="images/buildaward2018.jpg" class="award-logo-buildaward" alt="Image"> 
+                        </a>
+                <a href="#">
+                        <img src="images/irishgeorgiansociety.jpg" class="award-logo-igs" alt="Image"> 
+                        </a>
+            </div>
+        </div>
     </section>
 
 
