--- a/mystory.html
+++ b/mystory.html
@@ -23,7 +23,7 @@
                      <span class="icon-bar "></span>
                      <span class="icon-bar "></span>
                 </button>
-                <a class="navbar-logo" href="#myPage">
+                <a class="navbar-logo">
                     <a href="index.html" class="navbar-logo">
                       <img class="logo" src="/images/ConbuInteriorDesignlogo2updated1.png " alt="logo ">
                     </a>
@@ -67,6 +67,10 @@
                     <div class="mystory-image">
                         <img src="images/head.jpg" class="imgage-in-mystory-page" alt="Image">
                     </div>
+                    <!-- Used W3 Schools for code for audio embed -->
+                    <audio controls>
+                    <source src="Bottles_Empty.mp3" type="audio/mpeg"> Your browser does not support the audio element.
+                    </audio>
                 </div>
                 <div class="col-sm-8">
                     <div class="mystory-text">
