--- a/bathrooms.html
+++ b/bathrooms.html
@@ -16,14 +16,14 @@
 
     <!-- NAV -->
     <nav class="navbar navbar-default">
-        <div class="container-fluid ">
+        <div class="container-fluid">
             <div class="navbar-header ">
-                <button type="button " class="navbar-toggle" data-toggle="collapse " data-target="#navbar " aria-expanded="false ">
+                <button type="button" class="navbar-toggle" data-toggle="collapse " data-target="#navbar " aria-expanded="false ">
                      <span class="icon-bar "></span>
                      <span class="icon-bar "></span>
                      <span class="icon-bar "></span>
                 </button>
-                <a class="navbar-logo" href="#myPage">
+                <a class="navbar-logo">
                     <a href="index.html" class="navbar-logo">
                       <img class="logo" src="/images/ConbuInteriorDesignlogo2updated1.png " alt="logo ">
                     </a>
