--- a/bedrooms.html
+++ b/bedrooms.html
@@ -23,13 +23,13 @@
                      <span class="icon-bar "></span>
                      <span class="icon-bar "></span>
                 </button>
-                <a class="navbar-logo" href="#myPage">
+                <a class="navbar-logo">
                     <a href="index.html" class="navbar-logo">
                       <img class="logo" src="/images/ConbuInteriorDesignlogo2updated1.png " alt="logo ">
                     </a>
                 </a>
             </div>
-            <div class="navbar-collapse collapse " id="navbar">
+            <div class="navbar-collapse collapse" id="navbar">
                 <ul class="social-icons-nav hidden-xs hidden-sm">
                     <a href="https://www.linkedin.com/in/angelatconnolly">
                         <li class="fa fa-linkedin"></li>
@@ -123,8 +123,8 @@
 
     <footer class="container-fluid text-center ">
         <div class="row ">
-            <div class="social-links ">
-                <p class="follow-us ">Follow us on:</p>
+            <div class="social-links">
+                <p class="follow-us">Follow us on:</p>
                 <ul class="social-icons ">
                     <a href="https://www.linkedin.com/in/angelatconnolly">
                         <li class="fa fa-linkedin"></li>
