--- a/blog.html
+++ b/blog.html
@@ -23,7 +23,7 @@
                      <span class="icon-bar "></span>
                      <span class="icon-bar "></span>
                 </button>
-                <a class="navbar-logo" href="#myPage">
+                <a class="navbar-logo">
                     <a href="index.html" class="navbar-logo">
                       <img class="logo" src="/images/ConbuInteriorDesignlogo2updated1.png " alt="logo ">
                     </a>
