--- a/kitchens.html
+++ b/kitchens.html
@@ -23,7 +23,7 @@
                      <span class="icon-bar "></span>
                      <span class="icon-bar "></span>
                 </button>
-                <a class="navbar-logo" href="#myPage">
+                <a class="navbar-logo">
                     <a href="index.html" class="navbar-logo">
                       <img class="logo" src="/images/ConbuInteriorDesignlogo2updated1.png " alt="logo ">
                     </a>
@@ -63,17 +63,20 @@
 
         <div class="container-fluid">
             <div class="row">
-                <div class="col-xs-12 ">
-                    <h1 class="portfolio-h1">Kitchens</h1>
-                    <hr class="block-divider-portfolio">
-                    <div class="portfolio-p">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis
-                        nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis.
-                        </p>
-                    </div>
+                <h1 class="portfolio-h1">Kitchens</h1>
+                <hr class="block-divider-portfolio">
+                <div class="portfolio-p">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl
+                    ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis.
+                    </p>
+                </div>
+            </div>
+            <div class="row">
+                <div class="container">
+                    <!-- Looked up how to centre image on Stack Overflow -->
+                    <iframe width="560" height="360" src="https://www.youtube.com/embed/u2DYOsrJrDQ" class="img-responsive center-block" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
                 </div>
             </div>
         </div>
-
         <div class="container-fluid project-images">
             <div class="row">
                 <div class="col-sm-4">
@@ -118,6 +121,8 @@
         </div>
         <!-- Main Content -->
     </section>
+
+
     <!-- Footer -->
 
     <footer class="container-fluid text-center ">
