--- a/services.html
+++ b/services.html
@@ -23,7 +23,7 @@
                      <span class="icon-bar "></span>
                      <span class="icon-bar "></span>
                 </button>
-                <a class="navbar-logo" href="#myPage">
+                <a class="navbar-logo">
                     <a href="index.html" class="navbar-logo">
                       <img class="logo" src="/images/ConbuInteriorDesignlogo2updated1.png " alt="logo ">
                     </a>
@@ -45,16 +45,33 @@
                     </a>
                     <li class="fa fa-google "><a href="#h "></a></li>
                 </ul>
-                <ul class="nav navbar-nav navbar-left">
-                    <li><a href="index.html">Welcome</a></li>
-                    <li><a href="mystory.html">My Story</a></li>
-                    <li><a href="portfolio.html">Portfolio</a></li>
-                    <li><a href="blog.html">Blog</a></li>
-                    <li><a href="services.html">Services</a></li>
-                    <li><a href="contact.html">Contact</a></li>
-                </ul>
+                 <!-- Looking at code lab for the dropdown menu item -->
+                <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                    <ul class="nav navbar-nav navbar-left">
+                        <li><a href="index.html">Welcome</a></li>
+                        <li><a href="mystory.html">My Story</a></li>
+                        <li class="dropdown">
+                            <a href="portfolio.html" data-toggle="dropdown" class="dropdown-toggle">Portfolio<b class="caret"></b></a>
+                            <ul class="dropdown-menu">
+                                <li><a href="#">Kitchens</a></li>
+                                <li class="divider"></li>
+                                <li><a href="#">Bedrooms</a></li>
+                                <li class="divider"></li>
+                                <li><a href="#">Bathrooms</a></li>
+                                <li class="divider"></li>
+                                <li><a href="#">Living Rooms</a></li>
+                                <li class="divider"></li>
+                                <li><a href="#">Commercial</a></li>
+                                <li class="divider"></li>
+                                <li><a href="#">Custom Furniture</a></li>
+                            </ul>
+                        </li>
+                        <li><a href="blog.html">Blog</a></li>
+                        <li><a href="services.html">Services</a></li>
+                        <li><a href="contact.html">Contact</a></li>
+                    </ul>
+                </div>
             </div>
-        </div>
     </nav>
     <!-- NAV -->
 
@@ -80,7 +97,7 @@
     <section>
         <div class="container-fluid">
             <div class="row">
-                <div class="col-sm-8 services">
+                <div class="col-sm-8">
                     <img class="services-images" src="images/services.jpg"></img>
                 </div>
                 <div class="col-sm-4">
@@ -102,7 +119,7 @@
                         </p>
                     </div>
                 </div>
-                <div class="col-sm-8 services">
+                <div class="col-sm-8">
                     <img class="services-images" src="images/services.jpg"></img>
                 </div>
             </div>
